# psp-dynamic-libraries

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yaml
IOPrivileged/: CMakeLists.txt  Makefile  main.c
IPL_Updater/: CMakeLists.txt  Makefile
KBooti_Updater/: CMakeLists.txt  Makefile  main.c
LibPNG/: Makefile  main.c
PSPAV/: CMakeLists.txt  Makefile  exports.exp
PSPFTP/: CMakeLists.txt  Makefile
PSPIdentHelper/: CMakeLists.txt  Makefile  exports.exp  main.c
Peops/: CMakeLists.txt  Makefile  main.c
Peops/include/: common.h  main.h
Peops/spu/include/: adsr.h  reverb.h  stdafx.h
Peops/spu/src/: adsr.c  reverb.c  spu.c  xa.c
Peops/src/: audio.c  psp.c
USBDeviceDriver/: CMakeLists.txt  Makefile  main.c
Unarchiver/: Makefile  exports.exp  main.c
idStorageRegen/: CMakeLists.txt  Makefile  main.c
idStorageRegen/src/: idsregeneration.c
pre-built/: intraFont-gu.prx  libpng.prx  unarchiver.prx
